fixed the item alignment

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@ nav {
   justify-content: space-between;
   position: fixed;
   top: 0;
+  align-items: center;
 }
 
 nav span {
